# VIAN-light

./: .eslintignore  .gitignore  Development.md  README.md  binding.gyp  electron-builder.yml  electron.vite.config.1732714057012.mjs  electron.vite.config.mjs  entitlements.mac.plist  eslint.config.mjs  example.cpp  example.h  package-lock.json  package.json  pyrightconfig.json  video_reader.cpp  video_reader.h  vite_web.config.mjs
.github/workflows/: build_electron.yml  lint.yml  make_release.yml
docker/: Caddyfile  Dockerfile_backend  Dockerfile_frontend  docker-compose.yml
server/: authentication.py  config.py  database.py  main.py  pyproject.toml  setup.py  tasks.py
src/main/: api_functions.js  dialogs.js  ffmpeg.js  index.js  menu.js  shotboundary.js  shotboundary_worker.js  videoinfo_worker.js
src/main/workers/: cleanup_worker.js  export_project_worker.js  export_screenshot_worker.js  export_screenshots_worker.js  import_project_worker.js  screenshot_generation_worker.js  screenshots_generation_worker.js  shotboundary_worker.js  videoinfo_worker.js
src/preload/: index.js
src/renderer/: index.html  typed-router.d.ts
src/renderer/src/: App.vue  api.js  i18n.js  importexport.js  main.js  router.js  setupcsp.js  shortcuts.js
src/renderer/src/assets/: main.css
src/renderer/src/components/: ImageDialog.vue  LayoutDraggable.vue  LayoutDraggableItem.vue  LayoutTibava.vue  LayoutTibavaMobile.vue  ShotDetail.vue  (+9 more)
video_reader/: python_wrapper.cpp  video_reader.cpp  video_reader.h  video_reader_wrapper.cpp  video_reader_wrapper.h  worker.cpp  worker.h
(+11 files in other folders)
